tests/error/misc_errors/unreachable_1.err
Error: Unreachable (at $FILE:7:4)
  | 
5 | def foo() -> int:
6 |     return 0
7 |     x = 42
  |     ^^^^^^ This code is not reachable

Guppy compilation failed due to 1 previous error
